Fixed the word wrapping for gardens' name and location in My Gardens page so that it moves to the next line when they have reached the end of the line

--- a/src/main/resources/static/css/style-garden.css
+++ b/src/main/resources/static/css/style-garden.css
@@ -130,9 +130,8 @@ table tbody {
 
 td {
     max-width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    white-space: initial;
+    word-wrap: break-word;
 }
 
 .scroll-plants-container {
